Minor optimizations, not released